# u2net

./: .gitignore  README.md  data_loader.py  main.py  pyproject.toml  train.py
model/: u2net.py  u2net_expand.py  u2net_full.yaml  u2net_lite.yaml
